# guixy-rusty-toy

./: Cargo.toml  README.md  manifest.scm
app/: Cargo.toml
app/src/: main.rs
log/: Cargo.toml
log/src/: lib.rs
