[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# env_logger transitively requires `log = "0.4"` from crates.io.
env_logger = "0.11"

# Explicit dep on our local shadow `log` to ensure it's in the dep graph
# (workspace member alone isn't enough — cargo only resolves transitive
# crates that are actually requested).
log = { path = "../log" }
